# SFML-Framework

./: .gitignore  CMakeLists.txt
class/: Game.cpp  Game.hpp
class/States/: StatePlaying.cpp  StatePlaying.hpp
engine/GUI/: Button.cpp  Button.hpp  Canvas.cpp  Canvas.hpp  StackMenu.cpp  StackMenu.hpp  Textbox.cpp  Textbox.hpp  Widget.cpp  Widget.hpp
engine/ResourceManager/: ResourceHolder.cpp  ResourceHolder.hpp  ResourceManager.hpp
engine/States/: StateBase.hpp
engine/Util/: Animation.cpp  Animation.hpp  FPSCounter.cpp  FileUtil.cpp  Maths.cpp  ToggleKey.cpp
